Atualizacoes no repositorio do tutorial

--- a/comandos.tex
+++ b/comandos.tex
@@ -48,7 +48,7 @@
   xleftmargin=2.7ex,
   morecomment=[s][\color{red}]{-}{\ }, 
   morecomment=[s][\color{red}]{--}{\ },
-  morekeywords={uname,gcc,top,grep,man,ls},%
+  morekeywords={uname,gcc,git,top,grep,man,ls},%
   showstringspaces=false,
   commentstyle=\color{orange},
   keywordstyle=\color{blue},
