--- a/introducao.tex
+++ b/introducao.tex
@@ -1,10 +1,12 @@
 \chapter{Introdução}
 O objetivo deste texto é descrever os exercícios usados no laboratório da disciplina Sistemas Operacionais. Essa disciplina é oferecida na Faculdade de Tecnologia da Universidade Estadual de Campinas (FT/UNICAMP) para os cursos Bacharelado em Sistemas de Informação e Tecnologia em Análise e Desenvolvimento de Sistemas.
 
-Esse material pode ser utilizado por qualquer pessoa, de qualquer curso ou instituição, desde que respeitadas as condições da licença CC-BY-4.0, descrita na página \pageref{chp:licenca}. Informações de como obter o material também estão nessa página.
+Esse material pode ser utilizado por qualquer pessoa, de qualquer curso ou instituição, desde que respeitadas as condições da licença CC-BY-4.0, descrita na página \pageref{chp:licenca}. Informações de como citar e obter o material também estão nessa página.
 
 Supõe-se que o sistema operacional utilizado será o Linux \faLinux. Portanto, todos os comandos descritos neste texto são para o Linux. Recomenda-se que o leitor navegue sequencialmente pelo texto. Assim, terá melhor aproveitamento do laboratório.
 
+
+\section{Comandos básicos utilizados nesse tutorial}
 Alguns comandos básicos para o sistema Linux estão na \Cref{tab:comandosLinux} a seguir:
 
 \begin{table}[!htb]
@@ -15,14 +17,14 @@ Alguns comandos básicos para o sistema Linux estão na \Cref{tab:comandosLinux}
 \textbf{Comando}       & \textbf{Significado} \\ \midrule
 \ComandoParametros{cd}{dir}        & Muda para o diretório \textcolor{red}{\texttt{dir}}.       \\
 \multirow{2}{*}{\ComandoParametros{gedit}{arquivo}\,\&} & Abre o \textcolor{red}{\texttt{arquivo}} no editor de textos em segundo 
-plano e libera o terminal para outros comandos. Note o \& no fim da linha. \\
+plano e libera o terminal para outros comandos. Note o `\&' no fim da linha. \\
 \Comando{ls} & Lista os arquivos locais.        \\
 \ComandoParametros{unzip}{arq.zip} & Descompacta o arquivo \textcolor{red}{\texttt{arq.zip}}.   \\ \bottomrule
 \end{tabular}
 \end{center}
 \end{table}
 
-Todos os comandos que serão utilizados nesse tutorial serão executados no interpretador da linha de comandos (\textit{shell}), também chamado de terminal.
+Todos os comandos que serão utilizados nesse tutorial serão executados no interpretador da linha de comandos (\textit{shell}), também chamado de terminal. Para compilar os programas, utilizaremos o compilador \Comando{gcc}, disponível na maioria das distribuições Linux.
 
 Há ainda algumas dicas de teclas para os usuários iniciantes no \textit{bash} (o interpretador de comandos padrão no Linux). Elas estão resumidas na \Cref{tab:teclasBash} a seguir.
 
@@ -58,4 +60,12 @@ Caso queira saber informações específicas sobre uma determinada função que 
 
 \begin{lstlisting}[style=MyBashStyle]
 man malloc
+\end{lstlisting}
+
+\section{Instalação dos arquivos com os programas exemplos}
+Para instalação (cópia) dos programas utilizados como exemplo ao longo deste tutorial, é preciso clonar o repositório \href{https://github.com/gradvohl/labSistemasOperacionais}{\faGithub\ \texttt{labSistemasOperacionais}}. Depois, mude para o diretório \texttt{lab\-Sis\-te\-mas\-Ope\-ra\-ci\-onais}. Para isso, utilize os comandos a seguir.
+
+\begin{lstlisting}[style=MyBashStyle]
+git clone https://github.com/gradvohl/labSistemasOperacionais
+cd labSistemasOperacionais
 \end{lstlisting}
