Atualização da citação

--- a/licenca.tex
+++ b/licenca.tex
@@ -8,13 +8,13 @@ Essa licença permite que o usuário copie e redistribua o material em qualquer 
     \url{https://creativecommons.org/licenses/by/4.0}     
  \end{center}
 
-Todos os códigos fontes na linguagem C utilizados neste texto, bem como o \textit{script} para a instalação dos códigos fontes, os arquivos compactados e o código fonte em \LaTeX{} deste texto estão disponíveis no site do GitHub e indexados no site do Zenodo conforme os endereços a seguir.
+Todos os códigos fontes na linguagem C utilizados neste texto disponíveis no GitHub e indexados no site do Zenodo conforme os endereços a seguir.
 
-\faGithub\ GitHub: \url{https://github.com/gradvohl/laboratorioSO}
+\faGithub\ GitHub: \url{https://github.com/gradvohl/labSistemasOperacionais}
 
 DOI: \url{https://doi.org/10.5281/zenodo.2620612}
 
 Para citar este texto, use as informações a seguir:
 
 \noindent
-{\sc Gradvohl, A. L. S.} LaboratorioSO -- Tutorial para o Laboratório de Sistemas Operacionais. Zenodo. DOI: \href{http://doi.org/10.5281/zenodo.2620612}{10.5281/zenodo.2620612}, 2025.
+{\sc Gradvohl, A. L. S.} Laboratório de Sistemas Operacionais. Zenodo. DOI: \href{http://doi.org/10.5281/zenodo.2620612}{10.5281/zenodo.2620612}, 2025.
