--- a/produtorConsumidor.tex
+++ b/produtorConsumidor.tex
@@ -23,7 +23,7 @@ cd ../Semaforos
 Compile o programa anterior com a seguinte linha de comando:
 
 \begin{lstlisting}[style=MyBashStyle]
-gcc -lpthread prod_cons.c  -o prod_cons.o
+gcc -lpthread prod_cons.c  -o prod_cons
 \end{lstlisting}
 
-Agora execute o programa \texttt{./prod\_cons.o} e veja o resultado.
+Agora execute o programa \texttt{./prod\_cons} e veja o resultado.
