Atualizacao preliminar dos programas

--- a/disparandoProcessos.tex
+++ b/disparandoProcessos.tex
@@ -19,7 +19,7 @@ Observe o programa a seguir e tente entender o funcionamento da primitiva \textt
 \subsection{Exercício}
 Neste exercício, compilaremos o programa anterior e o executaremos.
 
-Antes de compilar o programa, verifique se você está no diretório onde se encontra o arquivo  \texttt{PaiFilho.c}, com o seguinte comando:
+Antes de compilar o programa, verifique se você está no diretório \texttt{Processos} onde se encontra o arquivo  \texttt{PaiFilho.c}, com o seguinte comando:
 
 \begin{lstlisting}[style=MyBashStyle]
 ls PaiFilho.c
