--- a/licenca.tex
+++ b/licenca.tex
@@ -8,9 +8,9 @@ Essa licença permite que o usuário copie e redistribua o material em qualquer 
     \url{https://creativecommons.org/licenses/by/4.0}     
  \end{center}
 
-Todos os códigos fontes na linguagem C utilizados neste texto disponíveis no GitHub e indexados no site do Zenodo conforme os endereços a seguir.
+Todos os códigos fontes escritos na linguagem C utilizados neste texto estão disponíveis no GitHub e indexados no site do Zenodo conforme os endereços a seguir.
 
-\faGithub\ GitHub: \url{https://github.com/gradvohl/labSistemasOperacionais}
+\faGithub\ \url{https://github.com/gradvohl/labSistemasOperacionais}
 
 DOI: \url{https://doi.org/10.5281/zenodo.2620612}
 
