--- a/progMultithread.tex
+++ b/progMultithread.tex
@@ -50,13 +50,14 @@ Compile e execute o programa anterior. Antes de compilar o programa, mude para o
 cd ../Thread
 \end{lstlisting}
 
-Para compilar, utilize a seguinte linha de comando:
+Para compilar e executar, utilize as seguintes linhas de comando:
 
 \begin{lstlisting}[style=MyBashStyle]
-gcc -lpthread funcoes.c thrd.c -o thrd
+gcc -pthread funcoes.c thrd.c -o thrd
+./thrd
 \end{lstlisting}
 
-\textcolor{orange}{\faExclamationTriangle} Observação: a chave \textcolor{red}{\texttt{-lpthread}} indica que será usada a biblioteca \texttt{pthread} para Linux. Em algumas distribuições, você deve usar a chave \textcolor{red}{\texttt{-pthread}}.
+%\textcolor{orange}{\faExclamationTriangle} Observação: a chave \textcolor{red}{\texttt{-lpthread}} indica que será usada a biblioteca \texttt{pthread} para Linux. Em algumas distribuições, você deve usar a chave \textcolor{red}{\texttt{-pthread}}.
 
 \section{Passagem de parâmetros para \textit{threads}}
 Vejamos agora como ocorre a passagem de parâmetros para os \textit{threads}. Antes, é preciso lembrar que na biblioteca PThreads, os \textit{threads} usam uma assinatura específica descrita na Figura~\ref{fig:assinaturaThread}. 
@@ -83,10 +84,12 @@ Perceba também que a variável de retorno (\texttt{soma}) é um ponteiro. Esse 
 Compile e execute o programa anterior utilizando a seguinte linha de comando:
 
 \begin{lstlisting}[style=MyBashStyle]
-gcc -lpthread auxFuncs.c mediaThreads.c -o mediaThread.o
+gcc -pthread auxFuncs.c mediaThreads.c -o mediaThreads
+./mediaThreads
 \end{lstlisting}
 
-\textcolor{orange}{\faExclamationTriangle} Observação: a chave \textcolor{red}{\texttt{-lpthread}} indica que será usada a biblioteca \texttt{pthread} para Linux. Em algumas distribuições, você deve usar a chave \textcolor{red}{\texttt{-pthread}}.
+%\textcolor{orange}{\faExclamationTriangle} Observação: a chave \textcolor{red}{\texttt{-lpthread}} indica que será usada a biblioteca \texttt{pthread} para Linux. Em algumas distribuições, você deve usar a chave \textcolor{red}{\texttt{-pthread}}.
+
 
 
 \section{Mais informações sobre programação \textit{multithread}}
