Updates from Overleaf

--- a/produtorConsumidor.tex
+++ b/produtorConsumidor.tex
@@ -10,7 +10,7 @@ Para resolver o problema do Produtor-Consumidor com multithread serão criados t
 
 Observe as primitivas para inicializar semáforos (\texttt{sem\_init}), para executar a operação \textit{up} (\texttt{sem\_post}) e para executar a operação \textit{down} (\texttt{sem\_wait}).
 
-Com base nessa explicação, observe o programa a seguir: 
+Com base nessa explicação, observe o programa \texttt{prod\_cons.c} a seguir: 
 \lstinputlisting[style=MyCStyle]{./Programas/Semaforos/prod_cons.c}
 
 \subsection{Exercício}
