Adição do epílogo

--- a/comandos.tex
+++ b/comandos.tex
@@ -21,6 +21,11 @@
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
 \definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+\definecolor{orcidlogocol}{HTML}{A6CE39}
+\definecolor{twitterlogocol}{RGB}{29,161,242}
+\definecolor{linkedinlogocol}{RGB}{10,102,194}
+\definecolor{mastodonlogocol}{RGB}{160,32,240}
+
 
 % Adiciona o : após o número da linha
 \renewcommand*\thelstnumber{\the\value{lstnumber}:}
