--- a/laboratorioSO.tex
+++ b/laboratorioSO.tex
@@ -50,7 +50,7 @@
 \clubpenalty100000
 
 \title{Laboratório de Sistemas Operacionais}
-\author{Prof. André Leon S. Gradvohl, Dr.\\\href{mailto://gradvohl@ft.unicamp.br}{gradvohl@ft.unicamp.br}}
+\author{Prof. André Leon S. Gradvohl, Dr.\\\href{mailto://gradvohl@unicamp.br}{gradvohl@unicamp.br}}
 \date{17 de junho de 2025}
 
 \hypersetup{
@@ -88,5 +88,8 @@
 
 \input{produtorConsumidor.tex}
 
+\input{epilogo}
+
 \input{licenca.tex}
+
 \end{document}
